# CodexCraft

./: .gitignore  CMakeLists.txt  CodexCraft.sln  README.md
CodexCraft/: CodexCraft.vcxproj  CodexCraft.vcxproj.filters  main.cpp
CodexCraft/assets/textures/: atlas_layout.json
CodexCraft/docs/: TextureAtlas.md
CodexCraft/shaders/: BlockPS.hlsl  BlockVS.hlsl
CodexCraft/src/camera/: FreeFlyCamera.cpp  FreeFlyCamera.h
CodexCraft/src/platform/windows/: Application.cpp  Application.h
CodexCraft/src/world/: Block.h  BlockRegistry.cpp  BlockRegistry.h  Chunk.h  ChunkPosition.h  TextureAtlas.cpp  TextureAtlas.h  ThreadSafeQueue.h  World.cpp  World.h
CodexCraft/src/world/meshing/: ChunkMeshCache.cpp  ChunkMeshCache.h  GreedyMesher.cpp  GreedyMesher.h  MeshTypes.h
assets/: README.md
shaders/: chunk.frag  chunk.vert
src/: App.cpp  App.hpp  Config.cpp  Config.hpp  main.cpp
src/Core/: JobSystem.cpp  JobSystem.hpp  Timer.hpp
src/Renderer/: Camera.cpp  Camera.hpp  Frustum.cpp  Frustum.hpp  GLContext.cpp  GLContext.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Util/: Hash.hpp  Logging.hpp  Math.hpp
src/World/: AtlasUV.hpp  Block.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  ChunkCoord.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkSection.cpp  ChunkSection.hpp  GreedyMesher.cpp  GreedyMesher.hpp  LOD.hpp  WorldGen.cpp  WorldGen.hpp  WorldStreamer.cpp  WorldStreamer.hpp
